push de la validation

--- a/MvcMusic/Views/Musics/Create.cshtml
+++ b/MvcMusic/Views/Musics/Create.cshtml
@@ -37,6 +37,7 @@
                 <input asp-for="Rating" class="form-control" />
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
+            <input type="hidden" asp-for="Validation" value="0" />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
