--- a/MvcMusic/Views/Musics/Index.cshtml
+++ b/MvcMusic/Views/Musics/Index.cshtml
@@ -39,6 +39,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Musics[0].Rating)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Musics[0].Validation)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -59,6 +62,16 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Rating)
+            </td>
+            <td>
+                @if (item.Validation == "0")
+                {
+                    <strong>Non validée</strong>
+                }
+                else
+                {
+                    <i>Validée</i>
+                }
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
